Student scholarship view alignment fixed

--- a/kalam-app/src/app/all-students-by-ground/all-students-by-ground.component.scss
+++ b/kalam-app/src/app/all-students-by-ground/all-students-by-ground.component.scss
@@ -25,6 +25,12 @@
     background: 0;
     border: 0;
 }
+.custom-table {
+    padding: 1rem;
+}
+.icon-cus-class {
+    padding-left: 0.7rem;
+}
 .custom-table table .mat-header-cell{
     padding: 0 0.2rem !important;
     font-size: 0.8em;
